--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,6 +7,7 @@ services:
     volumes:
       - .:/usr/src/app
       - /usr/src/app/node_modules
+      - /usr/src/app/node_modules/bcrypt
     environment:
       - MONGO_DB_URI=${MONGO_DB_URI}
     depends_on:
