add api key middleware

--- a/.env.example
+++ b/.env.example
@@ -2,3 +2,4 @@ MONGO_INIT_DB_ROOT_USERNAME=<username>
 MONGO_INIT_DB_ROOT_PASSWORD=<password>
 MONGO_DB_URI=mongodb://<username>:<password>@<host>:<port>/<db>
 PORT=<app port>
+API_KEY=<api key>
