--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,6 +14,8 @@ services:
       - mongo
   mongo:
     image: mongo
+    # temporary workaround for
+    command: mongod --quiet --logpath /dev/null
     ports:
       - "27017:27017"
     environment:
