--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.0.1",
+    "openai": "^4.20.0",
     "slugify": "^1.6.6"
   },
   "devDependencies": {
@@ -29,6 +30,6 @@
     "cors": "^2.8.5",
     "nodemon": "^3.0.1",
     "ts-node": "^10.9.1",
-    "typescript": "^5.2.2"
+    "typescript": "^5.3.2"
   }
 }
